@@ -6,7 +6,7 @@ lsl.common - Common information for the LSL package.  Including:
  * dp       - information about the DP system, 
  * mcs      - information about the station at large, 
  * stations - information about LWA stations, and 
- * sdm      - read in and interpret SDM files.
+ * sdf      - read in and interpret SDF files.
  """
 
 
